# crewAI-examples

./: .gitignore  .replit  README.md  Simple Hierarchical Process Example\CrewAI_Hiearchical_Process_Example.ipynb  app.py  crewai_task_event_planning_quickstart.ipynb  replit.md  work_in_progress.txt
crews/agentbay_sdk/: .gitignore  README.md  env.example  pyproject.toml
crews/agentbay_sdk/src/agentbay_sdk/: crew.py  main.py  pipeline.py
crews/agentbay_sdk/tests/: test_agentbay_code_flow.py  test_agentbay_persistent_session.py
crews/game-builder-crew/: pyproject.toml
crews/game-builder-crew/src/game_builder_crew/: crew.py
email_auto_responder_flow/: README.md  pyproject.toml
email_auto_responder_flow/src/email_auto_responder_flow/: main.py
email_auto_responder_flow/src/email_auto_responder_flow/tools/: create_draft.py
email_auto_responder_flow/src/email_auto_responder_flow/utils/: emails.py
game-builder-crew/: .env.example  README.md  agents.py  pyprojct.toml  pyproject.toml  tasks.py
game-builder-crew/src/game_builder_crew/: main.py
game-builder-crew/src/game_builder_crew/config/: agents.yaml
game_builder_crew/: README.md  pyproject.toml
game_builder_crew/src/game_builder_crew/: crew.py  main.py
gestell-crew/: .env.sample  .gitignore  README.md  pyproject.toml
gestell-crew/config/: crew.yaml  task.yaml
gestell-crew/src/: create.py  download.py  gestell_mcp.py  research.py
gestell-crew/src/crews/: create.py  research.py
instagram_post/: .env.example  README.md  agents.py  main.py  pyproject.toml  tasks.py
instagram_post/src/instagram_post/: crew.py  main.py
instagram_post/tools/: browser_tools.py  search_tools.py
job-posting/: .env.example  README.md  agents.py  main.py  pyproject.toml  requirements.txt
job-posting/src/job_posting/: crew.py  job_description_example.md  main.py
job-posting/src/job_posting/config/: tasks.yaml
job_posting/: README.md  pyproject.toml
job_posting/src/job_posting/: crew.py  main.py
landing_page_generator/: README.md  main.py  pyproject.toml  tasks.py
landing_page_generator/config/: agents.json  templates.json
landing_page_generator/src/landing_page_generator/: crew.py
landing_page_generator/src/landing_page_generator/config/: agents.yaml
landing_page_generator/src/landing_page_generator/tools/: file_tools.py
landing_page_generator/templates/Mosiac/tailwind-dashboard-template-mosiac/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
landing_page_generator/templates/Simple Light/tailwind-landing-page-template-simple-light/: package-lock.json  package.json
landing_page_generator/tools/: browser_tools.py  file_tools.py  search_tools.py  template_tools.py
lead-score-flow/: README.md  pyproject.toml
lead-score-flow/src/lead_score_flow/: constants.py  main.py
lead-score-flow/src/lead_score_flow/utils/: candidateUtils.py
linkedin_post_automater/: README.md  pyproject.toml
linkedin_post_automater/src/linkedin_post_automater/: crew.py  main.py
linkedin_post_automater/src/linkedin_post_automater/config/: agents.yaml  (+1 more)
markdown_validator/: .env.example  MarkdownTools.py  README.md  main.py  pyproject.toml
markdown_validator/src/markdown_validator/: main.py
marketing_posts_example/: pyproject.toml
marketing_strategy/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_dashboard.py  run_inputs.json
marketing_strategy/data/: bcg2.txt  crewai.txt  layerhealth.txt  patanjali.txt  playo.txt  search_missing.txt  snowflake.txt  sushisams.txt
marketing_strategy/src/marketing_posts/: crew.py  main.py  reflection.py  run_inputs.py  test.py
marketing_strategy/src/marketing_posts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
marketing_strategy/src/marketing_posts_e2e_eval/: main.py  marketing_feedback.txt  notebook.ipynb  run_inputs.py
match_profile_to_positions/: README.md  pyproject.toml
match_profile_to_positions/db/: chroma.sqlite3
match_profile_to_positions/src/match_to_proposal/: crew.py  main.py
meeting_assistant_flow/: .gitignore  README.md  meeting_notes.txt  pyproject.toml
meeting_assistant_flow/src/meeting_assistant_flow/: main.py  types.py
meta_quest_knowledge/: .env.example  pyproject.toml
meta_quest_knowledge/src/meta_quest_knowledge/: crew.py
prep_for_a_meeting/: README.md  pyproject.toml
prep_for_a_meeting/src/prep_for_a_meeting/: crew.py  main.py
recruitment/: README.md  pyproject.toml
recruitment/src/recruitment/: crew.py  main.py
research_analyzer_with_bedrock/: README.md  agents.py  main.py  pyproject.toml  tasks.py
research_analyzer_with_bedrock/utils/: Bedrock.py  PdfReader.py
self_evalulation_loop_flow/: README.md  pyproject.toml
self_evalulation_loop_flow/src/self_evaluation_loop_flow/: main.py
starter_template/: .env_example  .gitignore  README.md  agents.py  main.py  pyproject.toml  tasks.py
stock_analysis/: .env.example  .gitignore  README.md  main.py  pyproject.toml  stock_analysis_agents.py  stock_analysis_tasks.py
stock_analysis/db/08f75071-7066-426d-9a9e-a9efc6e63d81/: index_metadata.pickle
stock_analysis/src/stock_analysis/: crew.py  main.py
stock_analysis/static/: script.js  style.css
stock_analysis/templates/: index.html
stock_analysis/tools/: browser_tools.py  calculator_tools.py  search_tools.py  sec_tools.py
surprise trip/: pyproject.toml  training_data.pkl
surprise trip/src/surprise_travel/: crew.py  main.py
surprise_trip/: README.md  pyproject.toml
trip_planner/: .env.example  README.md  main.py  pyproject.toml  trip_agents.py  trip_tasks.py
trip_planner/src/trip_planner/: crew.py  main.py
trip_planner/tools/: browser_tools.py  calculator_tools.py  search_tools.py
wordpress-publisher/: README.md  pyproject.toml  report_ptbr.md
wordpress-publisher/src/agencia_noticias/: crew.py  main.py
write_a_book_with_flows/: README.md  pyproject.toml
write_a_book_with_flows/src/write_a_book_with_flows/: main.py
write_poem/: .env.example  README.md  pyproject.toml
write_poem/src/write_poem/: crew.py  main.py
(+468 files in other folders)
