[tool.poetry]
name = "email_auto_responder_flow"
version = "0.1.0"
description = "email_auto_responder_flow using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {path="/Users/brandonhancock/Code/crewai/crewAI", develop=true}
asyncio = "*"
langchain-tools = "^0.1.34"
crewai-tools = "^0.12.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.145.0"

[tool.poetry.scripts]
email_auto_responder_flow = "email_auto_responder_flow.main:main"
run_crew = "email_auto_responder_flow.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
