[tool.poetry]
name = "instagram_post"
version = "0.1.0"
description = "instagram_post using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
instagram_post = "instagram_post.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"