[project]
name = "linkedin_post_automater"
version = "0.1.0"
description = "linkedin_post_automater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "google-genai>=1.19.0",
]

[project.scripts]
linkedin_post_automater = "linkedin_post_automater.main:run"
run_crew = "linkedin_post_automater.main:run"
train = "linkedin_post_automater.main:train"
replay = "linkedin_post_automater.main:replay"
test = "linkedin_post_automater.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
