[tool.poetry]
name = "marketing_posts"
version = "0.1.0"
description = "marketing-posts using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
packages = [{ include = "marketing_posts" }]
include = ["marketing_posts/*"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { version = "0.85.0", extras = ["tools"] }
crewai-tools = ">=0.4.6"

[tool.poetry.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"
run_crew = "marketing_posts.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
