[tool.poetry]
name = "crewAI-examples"
version = "0.0.0"
description = ""
authors = ["John Smith <john@example.com>"]

[tool.poetry.scripts]
crewAI-examples = "main:main"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
#pydantic = "^2.4.2"
langchain = "*"
#openai = "^1.13.3"
crewai = "^0.11.0"
duckduckgo-search = "*"
setuptools = "*"
python-decouple = "*"
#langchain-community = "*"

[[tool.poetry.packages]]
include = "*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"