[tool.poetry]
name = "stock_analysis"
version = "0.1.0"
description = "stock_analysis using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
stock_analysis = "stock_analysis.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"